<resources>
    <string name="app_name">Menu Wise</string>
    <string name="action_logout">Logout</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="ingredients">Ingredients…</string>
    <string name="instructions">Instructions…</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_create_your_account_now">Welcome! Create your account now</string>
    <string name="authentication_image">Authentication Image</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_mealType">Recipe MealType</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="_4_6">4.6</string>
    <string name="there_are_no_favorite_items_yet">There are no favorite items yet.</string>
    <string name="favorites_list">Favorites List</string>
    <string name="_1_cut_the_vegetables_n2_cook_for_15_mins">1. Cut the vegetables\n2. Cook for 15 mins</string>
    <string name="menu_wise">Menu Wise\n</string>
    <string name="main_page">main page</string>
    <string name="_15_min">• 15 min</string>
    <string name="favorite_icon">favorite Icon</string>
    <string name="star">star</string>
    <string name="italian_cuisine">Italian Cuisine</string>
    <string name="loading">Loading…</string>
</resources>