<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="16dp"
    android:backgroundTint="?attr/colorSurface"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circular_image_bg"
            android:contentDescription="@string/recipe_image"
            android:outlineProvider="background" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="?android:textColorPrimary"
                android:maxLines="1"
                android:ellipsize="end" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealTypeChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:singleLine="true"
                app:chipSpacing="4dp" />


            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_remove"
                android:background="@android:color/transparent"
                android:contentDescription="@string/remove_from_favorites"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                app:tint="@android:color/holo_red_dark" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
